--- a/images/knavite/activaor-0.26/dockerfile
+++ b/images/knavite/activaor-0.26/dockerfile
@@ -1,2 +1,2 @@
-FROME gcr.io/knative-releases/knative.dev/serving/cmd/activator@sha256:8619f871364463cd821a7324636686b6d835ca65c3d671fb8c141b8437fd2a0b
+FROM gcr.io/knative-releases/knative.dev/serving/cmd/activator@sha256:8619f871364463cd821a7324636686b6d835ca65c3d671fb8c141b8437fd2a0b
 
